--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,71 @@
+body {
+  background-color: #fff5e4;
+}
 
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 60px;
+  margin-bottom: 20px;
+  padding: 30px;
+  background-color: #ffe3e1;
+  border-radius: 10px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  font-family: sans-serif;
+}
+
+h1 {
+  color: #ff9494;
+  text-align: center;
+  font-size: 36px;
+}
+
+select {
+  display: block;
+  font-size: 16px;
+  width: 100%;
+  border-radius: 4px;
+  padding: 9px;
+}
+
+h2 {
+  margin: 0 0 7px;
+  font-size: 28px;
+}
+
+.city {
+  display: flex;
+  margin: 20px 0;
+  justify-content: space-between;
+  padding: 20px 0;
+  border-bottom: 1px dashed #fff5e4;
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 24px;
+  line-height: 48px;
+  vertical-align: middle;
+}
+
+footer {
+  text-align: center;
+  color: #ff9494;
+  font-size: 13px;
+  font-family: "Courier New", Courier, monospace;
+}
+.code-source {
+  text-decoration: none;
+}
