--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,11 @@ h2 {
   vertical-align: middle;
 }
 
+.home-page {
+  text-decoration: none;
+  color: #ff9494;
+}
+
 footer {
   text-align: center;
   color: #ff9494;
